# ace-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ace-platform.tour.json  docker-compose.prod.yml  docker-compose.yml  fly.staging.toml  fly.toml  pyproject.toml
.beads/: .gitignore  issues.jsonl  last-touched
.github/workflows/: docs-production.yml  docs-staging.yml  production.yml  staging.yml
ace_core/: llm.py  logger.py  playbook_utils.py
ace_platform/: config.py
ace_platform/api/: auth.py  (+2 more)
docs/: API_REFERENCE.md  BILLING_DECISIONS.md  END_USER_UAT.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_PLAN.md  MCP_INTEGRATION.md  QUICKSTART.md  SELF_HOSTED_DEPLOYMENT.md  TOKEN_ECONOMICS.md  TROUBLESHOOTING.md  UAT_CHECKLIST.md  USAGE_PAGE_REDESIGN.md
docs-site/: .dockerignore  .gitignore  Dockerfile  docusaurus.config.ts  fly.staging.toml  fly.toml  nginx.conf  package-lock.json  package.json  sidebars.ts
scripts/: README.md  deploy-mcp.sh  full_customer_journey.sh  load_test_mcp.py  promote_superuser.py  quick_uat.sh  sentry_project_audit.py
tests/: conftest.py  test_account_routes.py  test_admin.py  test_admin_alerts.py  test_analytics_routes.py  test_api_app.py  test_api_key_auth.py  test_api_key_auth_resilience.py  test_audit.py  test_auto_evolution.py  test_billing_routes.py  test_billing_service.py  test_content_converter.py  test_csrf.py  test_e2e_billing_flow.py  test_e2e_full_flow.py  test_email_verification.py  test_evolution.py  test_evolution_idempotency.py  test_evolution_stats.py  test_evolution_usage_records.py  test_jwt_auth.py  test_limits.py  test_login_lockout.py  test_mcp_sentry_init.py  test_mcp_server.py  test_metrics.py  test_middleware.py  test_new_ip_detection.py  test_oauth.py  test_password_management.py  test_password_reset.py  test_playbook_matching.py  test_playbook_routes.py  test_production_config.py  test_promote_superuser.py  test_rate_limit.py  test_sentry_bootstrap.py  test_stripe_config.py  test_subscription_checks.py  (+2 more)
web/: .env.example  Dockerfile  fly.staging.toml  fly.toml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
(+184 files in other folders)
