[project]
name = "ace-platform"
version = "0.1.0"
description = "Hosted ACE platform for self-improving AI agents"
requires-python = ">=3.10"

dependencies = [
    # From upstream ACE
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database - Async (for API/MCP)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",

    # Database - Sync (for workers)
    "psycopg2-binary>=2.9.0",

    # Migrations
    "alembic>=1.13.0",

    # Background tasks
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.2.0",  # Pin bcrypt for passlib compatibility
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",  # For Pydantic email validation
    "authlib>=1.3.0",  # OAuth client library
    "itsdangerous>=2.1.0",  # Session middleware for OAuth state

    # MCP
    "mcp>=1.0.0",
    "fastmcp-mount>=0.1.0",  # Fix MCP endpoint paths when mounted under sub-path

    # Billing (optional)
    "stripe>=7.0.0",

    # Templates
    "jinja2>=3.1.0",

    # HTTP client
    "httpx>=0.26.0",

    # Utilities
    "pydantic-settings>=2.0.0",

    # Metrics
    "prometheus-client>=0.20.0",

    # Error tracking
    "sentry-sdk[fastapi,celery]>=2.0.0",

    # Email
    "resend>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "httpx>=0.26.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["ace_platform*", "ace_core*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
